# nanobind-uv-template

./: .gitignore  CMakeLists.txt  README.md  README_zh.md  pyproject.toml
.github/workflows/: ci.yml  pypi.yml  release.yml
bindings/: CMakeLists.txt  _core.cpp
cmake/: NBUVOptions.cmake
cmake/nbuv/: NBUVOptions.cmake  NBUVWarnings.cmake
core/: CMakeLists.txt
core/include/nbuv/: greeter.hpp
core/src/: math.cpp
libs/nbuv/: CMakeLists.txt
libs/nbuv/cmake/: NBUVOptions.cmake
libs/nbuv/include/nbuv/: math.hpp
libs/nbuv/src/: greeter.cpp
libs/nbuv/tests/: CMakeLists.txt  test_greeter.cpp  test_math.cpp
src/nbuv/: __init__.py
tests/: test_basic.py
