[build-system]
requires = ["scikit-build-core >=0.10", "nanobind >=2.12.0"]
build-backend = "scikit_build_core.build"

[project]
name = "nbuv"
version = "0.1.0"
description = "Example package for the nanobind-uv-template GitHub template"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "touken928" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/touken928/nanobind-uv-template"
Repository = "https://github.com/touken928/nanobind-uv-template"
Issues = "https://github.com/touken928/nanobind-uv-template/issues"

[project.optional-dependencies]
test = ["pytest>=8"]

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"

[tool.scikit-build.cmake]
version = ">=3.15"
build-type = "Release"

[tool.scikit-build.wheel]
py-api = "cp312"

[tool.scikit-build.wheel.packages]
"nbuv" = "src/nbuv"

[tool.uv]
# Rebuild the project whenever C++ or CMake sources change so `uv sync` /
# `uv run` picks up native changes automatically.
cache-keys = [
    { file = "pyproject.toml" },
    { file = "CMakeLists.txt" },
    { file = "core/**/CMakeLists.txt" },
    { file = "core/**/*.cpp" },
    { file = "core/**/*.hpp" },
    { file = "core/**/*.h" },
    { file = "bindings/**/CMakeLists.txt" },
    { file = "bindings/**/*.cpp" },
    { file = "bindings/**/*.hpp" },
]

[dependency-groups]
dev = [
    "pytest>=8",
    "scikit-build-core>=0.10",
    "nanobind>=2.12.0",
]
